added intial attempt at code generation of the calibrations file; moved library to maven submodule so that we can have plugin module be in the project